--- a/SourceCode/Chipza v2.0/Chipza Cpu Page.html
+++ b/SourceCode/Chipza v2.0/Chipza Cpu Page.html
@@ -46,7 +46,7 @@
         </div>
         <div class = "section3">
             <img src="gamingpc.jpg">
-            <h2 class="title">Optimized for Enthusiasts</h2>
+            <h2>Optimized for Enthusiasts</h2>
             <p>Compatible with many high-performance cooling systems</p>
             <div class="linkFormat">
                 <a>Learn More</a>
@@ -55,7 +55,7 @@
     
         <div class="section4">
             <img src="quickstore.png">
-            <h2 class="title">Chipza QuickStore Technology</h2>
+            <h2>Chipza QuickStore Technology</h2>
             <p>Accelerate your storage with <br>Chipza's latest and greatest technology</p>
             <div class="linkFormat">
                 <a>Learn More</a>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="section5">
-            <h2 class="title">PCIe 4.0 Support</h2>
+            <h2>PCIe 4.0 Support</h2>
             <p>Blazing fast storage, More bandwidth, Easy to install</p>    
             <div class="linkFormat">
                 <a>Learn More</a>
@@ -71,15 +71,15 @@
         </div>
 
         <div class="section6">
-            <h2 class="title">Coming soon to your location</h2>
+            <h2>Coming soon to your location</h2>
             <p>Release date: Septermber 30 2021</p>
             <div class="linkFormat">
                 <a>Order Now</a>
             </div>
         </div>
         <div class="section7">
-            <h2 class="title" style="text-align: center;">Newest</h2>
-            <h2 class="title">Chipza's QuickSlick Series Desktop Processors</h2>
+            <h2  style="text-align: center;">Newest</h2>
+            <h2>Chipza's QuickSlick Series Desktop Processors</h2>
             <div class="grid-container">
                 <div class="grid">
                     <h3 class="subtitle">QuickSlick  21v</h3>
@@ -124,8 +124,8 @@
                     </p>
                 </div>
             </div>
-            <h2 class="title" style="text-align: center;">Prveious Generation</h2>
-            <h2 class="title">Chipza's SwiftGale Series Desktop Processors</h2>
+            <h2  style="text-align: center;">Prveious Generation</h2>
+            <h2>Chipza's SwiftGale Series Desktop Processors</h2>
             <div class="grid-container">
                 <div class="grid">
                     <h3 class="subtitle">SwiftGale 11v</h3>
